# wiimote-ps2

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  write.cpp
BLE_Puppet_Adapter/: Makefile  platformio.ini
BLE_Puppet_Adapter/include/: bluetooth_adapter.h  i2c.h  main.h
BLE_Puppet_Adapter/src/: bluetooth_adapter.cpp  i2c.cpp  main.cpp
PS2_Controller_Puppet/: Makefile
PS2_Controller_Puppet/include/: adapter_i2c.h  ps2_spi.h
PS2_Controller_Puppet/src/: adapter_i2c.cpp  main.cpp  ps2_spi.cpp
PS2_SPI/: PS2_SPI.h  PS2_SPI.ino
PS2_STM32_Controller/: Makefile  upload.bat
PS2_STM32_Controller/include/: clock.h  gpio.h  main.h  spi.h  systick.h  uart.h
PS2_STM32_Controller/src/: clock.c  gpio.c  main.c  spi.c  systick.c  uart.c
WiimotePS2PuppetAdapter/: CMakeLists.txt
WiimotePS2PuppetAdapter/include/: ble_handler.h  main.h  wiimote_handle.h
WiimotePS2PuppetAdapter/src/: CMakeLists.txt  ble_handler.c  main.c  wiimote_handler.c
WiimotePS2PuppetAdapter/src/wiiuse_src/: CMakeLists.txt
WiimotePuppetBLEArduinoAdapter/: Makefile
Wiimote_Puppet_BLE_Arduino_Adapter/include/: CharacteristicCallbacks.h  ServerCallbacks.h  ble_adapter.h  i2c.h
Wiimote_Puppet_BLE_Arduino_Adapter/src/: CharacteristicCallbacks.cpp  ServerCallbacks.cpp  ble_adapter.cpp  i2c.cpp  main.cpp
bluetooth test/bluetooth/: bluetooth.ino
bluetooth test/bluetooth_central.ino/: bluetooth_central.ino.ino
ps2_controller/esp32/master/master/: helper.h  master.ino
ps2_controller/esp32/slave/slave/: helper.h  slave.ino
ps2_controller/ps2_arduino/: ps2_arduino.ino
ps2_controller/r4_wifi/r4slave/: M4_Minima_Test_Code_Fast.ino
ps2_controller/slave/: helper.h  slave.ino
